Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-115831

REG 5->6: Setting property placeHolderText on QPlainTextEdit does not have any effect if the QPlainTextEdit does not have focus

XMLWordPrintable

    • All
    • 4c7cac682 (dev), f0869a66a (6.6), 45ecbe1cb (tqtc/lts-6.5)

      qtbug115831.zip shows a QLineEdit (initially focussed) and a QPlainTextEdit and sets the QPlainTextEdit's placeHolderText by a timer. Note the it does not become visible until the QPlainTextEdit gets focus.

      Reported as Designer issue:

      Updating placeholder text in QPlainTextEdit via property editor no longer updates Designer view.  In earlier QtCreator versions this placeholder text was immediately update while typing it.  Now the project must be rebuilt to see the placeholder text changed.

        1. qtbug115831.zip
          1 kB
          Friedemann Kleint
        2. QTBUG-115831.tgz
          3 kB
          Axel Spoerl
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            axelspoerl Axel Spoerl
            thirdstrand Mitch Wihnkle
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes